# HUM

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: AccompanimentGenerator.h  AudioIngestor.h  DataTypes.h  LeadSynthesizer.h  MixerAndExporter.h  MusicalAnalyzer.h  PitchExtractor.h
engine/src/: AccompanimentGenerator.cpp  AudioIngestor.cpp  LeadSynthesizer.cpp  MixerAndExporter.cpp  MusicalAnalyzer.cpp  PitchExtractor.cpp  main.cpp
frontend/: app.js  index.html  styles.css
include/: AudioIngestor.h  DataTypes.h
server/: package-lock.json  package.json  server.js
src/: AudioIngestor.cpp  main.cpp
